# metrics-monitor

./: .env.default  .env.prod.default  .env.test.default  .gitignore  README.md  docker-compose.yml  pyproject.toml
metrics_monitor/: db_operations.py  errors.py  main.py  models.py  settings.py  websites.json
tests/: conftest.py  test_db_operations.py  test_main.py
