[tool.poetry]
name = "metrics-monitor"
version = "0.1.0"
description = ""
authors = ["SerSamgy <samgy7cool@gmail.com>"]
readme = "README.md"
packages = [{include = "metrics_monitor"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = {version = "^3.8.6", extras = ["speedups"]}
asyncpg = "^0.29.0"
pydantic-settings = "^2.0.3"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
