[tool.poetry]
name = "metrics-monitor"
version = "0.1.0"
description = ""
authors = ["SerSamgy <samgy7cool@gmail.com>"]
readme = "README.md"
packages = [{include = "metrics_monitor"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = {version = "^3.8.6", extras = ["speedups"]}
asyncpg = "^0.29.0"
pydantic-settings = "^2.0.3"
python-dotenv = "^1.0.0"

[tool.poetry.group.test.dependencies]
Faker = "^19.13.0"
freezegun = "^1.2.2"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.coverage.report]
exclude_also = [
    "while True:",
    "if __name__ == .__main__.:",
]
